--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.lpf</groupId>
-    <artifactId>maven-sample</artifactId>
+    <artifactId>mavendemo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -12,7 +12,8 @@
         <spring.version>5.1.8.RELEASE</spring.version>
         <spring-security.version>5.0.12.RELEASE</spring-security.version>
         <jackson.version>2.10.0</jackson.version>
-        <fast.json.version>1.2.61</fast.json.version>
+        <c3p0.version>0.9.5.3</c3p0.version>
+        <fastjson.version>1.2.61</fastjson.version>
     </properties>
 
     <dependencies>
@@ -22,7 +23,7 @@
             <version>1.9.3</version>
         </dependency>
 
-        <!-- 引入Spring框架组件 -->
+        <!-- Spring框架 -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
@@ -154,7 +155,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>${fast.json.version}</version>
+            <version>${fastjson.version}</version>
         </dependency>
 
         <!--lombok-->
@@ -163,5 +164,13 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
+
+        <!--c3p0-->
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>${c3p0.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
