--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
         <spring-security.version>5.0.12.RELEASE</spring-security.version>
         <jackson.version>2.10.0</jackson.version>
         <c3p0.version>0.9.5.3</c3p0.version>
+        <log4j2.version>2.5</log4j2.version>
+        <fast.json.version>1.2.61</fast.json.version>
+        <c3p0.version>0.9.5.3</c3p0.version>
         <fastjson.version>1.2.61</fastjson.version>
     </properties>
 
@@ -165,6 +168,12 @@
             <version>${lombok.version}</version>
         </dependency>
 
+        <!--mysql driver-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.16</version>
+        </dependency>
         <!--c3p0-->
         <dependency>
             <groupId>com.mchange</groupId>
@@ -172,5 +181,43 @@
             <version>${c3p0.version}</version>
         </dependency>
 
+
+        <!-- slf4j + log4j2 begin -->
+        <!--log4j2-->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>
+        <!-- slf4j -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.10</version>
+        </dependency>
+        <!-- 桥接：告诉Slf4j使用Log4j2 -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <!-- 桥接：告诉commons logging使用Log4j2 -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-jcl</artifactId>
+            <version>2.2</version>
+        </dependency>
+
+        <!--c3p0-->
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>${c3p0.version}</version>
+        </dependency>
     </dependencies>
 </project>
