--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <log4j2.version>2.5</log4j2.version>
         <c3p0.version>0.9.5.3</c3p0.version>
         <fastjson.version>1.2.61</fastjson.version>
+        <poi.version>4.1.0</poi.version>
     </properties>
 
     <build>
@@ -244,6 +245,19 @@
             <artifactId>c3p0</artifactId>
             <version>${c3p0.version}</version>
         </dependency>
+
+        <!--poi,支持excel,word-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+
     </dependencies>
 
     <repositories><!-- 代码库 -->
