--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,12 @@
             <version>${poi.version}</version>
         </dependency>
 
+        <!--JKS密钥生成-->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk16</artifactId>
+            <version>1.46</version>
+        </dependency>
     </dependencies>
 
     <repositories><!-- 代码库 -->
